antlr4/EzLangParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import EzLangParserVisitor from './EzLangParserVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class EzLangParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "'const'", "'let'", "'static'", "'match'", 
                            "'loop'", "'continue'", "'break'", "'null'", 
                            "'void'", "'struct'", "'tuple'", "'type'", "'typeof'", 
                            "'from'", "'import'", "'export'", "'true'", 
                            "'false'", "'this'", "'declare'", "'throw'", 
                            "'catch'", "'I8'", "'I16'", "'I32'", "'I64'", 
                            "'U8'", "'U16'", "'U32'", "'U64'", "'D64'", 
                            "'String'", "'Bool'", "'Null'", "'Void'", "'Dict'", 
                            "'Tuple'", "'Array'", "'Function'", null, null, 
                            null, null, "'}}'", "'=>'", "'->'", "'%%'", 
                            "'<<'", "'<='", "'<'", "'>>'", "'>='", "'>'", 
                            "','", "'=='", "'==='", "'!='", "'!=='", "'='", 
                            "'::'", "':'", "'??'", "'?'", "'('", "')'", 
                            "'{'", "'}'", "'['", "']'", "'+'", "'-'", "'~'", 
                            "'!'", "'*'", "'/'", "'%'", "'&'", "'^'", "'|'", 
                            "'&&'", "'||'", "'@'", "'.'", "'...'", "';'", 
                            null, null, null, null, "'{{'" ];
    static symbolicNames = [ null, "Const", "Let", "Static", "Match", "Loop", 
                             "Continue", "Break", "Null", "Void", "Struct", 
                             "Tuple", "Type", "TypeOf", "From", "Import", 
                             "Export", "True", "False", "This", "Declare", 
                             "Throw", "Catch", "I8", "I16", "I32", "I64", 
                             "U8", "U16", "U32", "U64", "D64", "String", 
                             "Bool", "TNull", "TVoid", "TDict", "TTuple", 
                             "TArray", "Fn", "ID", "T", "Number", "Quote", 
                             "ExpEnd", "Ret", "Pipe", "PH", "ML", "LTE", 
                             "LessThan", "MR", "GTE", "GreatearThan", "Comma", 
                             "Eqs", "Eqt", "NotE", "NotEs", "Eq", "DC", 
                             "Conly", "DQ", "Query", "LP", "RP", "LeftBracket", 
                             "RightBracket", "LS", "RS", "Plus", "Minus", 
                             "BitNot", "Not", "Multiply", "Divide", "Modulus", 
                             "BitAnd", "BitXOr", "BitOr", "And", "Or", "At", 
                             "Dot", "Spread", "Eos", "MC", "SC", "WS", "E", 
                             "ExpStart", "Char" ];
    static ruleNames = [ "prog", "progStat", "hoisting", "importStat", "statment", 
                         "variable", "assignVar", "deconstVar", "deconstField", 
                         "declareDef", "typeDef", "type", "typeFnField", 
                         "typeDictField", "typeName", "struct", "structField", 
                         "fnGroup", "fn", "param", "id", "expr", "getOp", 
                         "string", "stringAtom", "tuple", "tupleField", 
                         "array", "dict", "dictField", "call", "callee", 
                         "callField", "matchStat", "matchField", "elseField", 
                         "matchExpr", "ret", "loopStat" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = EzLangParser.ruleNames;
        this.literalNames = EzLangParser.literalNames;
        this.symbolicNames = EzLangParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 11:
    	    		return this.type_sempred(localctx, predIndex);
    	case 21:
    	    		return this.expr_sempred(localctx, predIndex);
    	case 22:
    	    		return this.getOp_sempred(localctx, predIndex);
    	case 30:
    	    		return this.call_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    type_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 4);
    		case 1:
    			return this.precpred(this._ctx, 7);
    		case 2:
    			return this.precpred(this._ctx, 5);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 3:
    			return this.precpred(this._ctx, 10);
    		case 4:
    			return this.precpred(this._ctx, 9);
    		case 5:
    			return this.precpred(this._ctx, 8);
    		case 6:
    			return this.precpred(this._ctx, 7);
    		case 7:
    			return this.precpred(this._ctx, 6);
    		case 8:
    			return this.precpred(this._ctx, 5);
    		case 9:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    getOp_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 10:
    			return this.precpred(this._ctx, 2);
    		case 11:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    call_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 12:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	prog() {
	    let localctx = new ProgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, EzLangParser.RULE_prog);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 81;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===14) {
	            this.state = 78;
	            this.importStat();
	            this.state = 83;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 85; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 84;
	            this.progStat();
	            this.state = 87; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & 4294524926) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & 45055) !== 0) || ((((_la - 64)) & ~0x1f) == 0 && ((1 << (_la - 64)) & 263061) !== 0));
	        this.state = 89;
	        this.match(EzLangParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	progStat() {
	    let localctx = new ProgStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, EzLangParser.RULE_progStat);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 91;
	            this.hoisting();
	            break;

	        case 2:
	            this.state = 92;
	            this.match(EzLangParser.Export);
	            this.state = 93;
	            this.hoisting();
	            break;

	        case 3:
	            this.state = 94;
	            this.statment();
	            break;

	        }
	        this.state = 97;
	        this.match(EzLangParser.Eos);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	hoisting() {
	    let localctx = new HoistingContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, EzLangParser.RULE_hoisting);
	    try {
	        this.state = 103;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	        case 2:
	        case 3:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 99;
	            this.variable();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 100;
	            this.typeDef();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 101;
	            this.struct();
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 102;
	            this.declareDef();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importStat() {
	    let localctx = new ImportStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, EzLangParser.RULE_importStat);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.match(EzLangParser.From);
	        this.state = 106;
	        this.string();
	        this.state = 107;
	        this.match(EzLangParser.Import);
	        this.state = 108;
	        this.match(EzLangParser.LeftBracket);
	        this.state = 109;
	        _la = this._input.LA(1);
	        if(!(_la===40 || _la===41)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 114;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===54) {
	            this.state = 110;
	            this.match(EzLangParser.Comma);
	            this.state = 111;
	            _la = this._input.LA(1);
	            if(!(_la===40 || _la===41)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 116;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 117;
	        this.match(EzLangParser.RightBracket);
	        this.state = 118;
	        this.match(EzLangParser.Eos);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statment() {
	    let localctx = new StatmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, EzLangParser.RULE_statment);
	    try {
	        this.state = 125;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 8:
	        case 9:
	        case 11:
	        case 13:
	        case 19:
	        case 22:
	        case 23:
	        case 24:
	        case 25:
	        case 26:
	        case 27:
	        case 28:
	        case 29:
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	        case 35:
	        case 36:
	        case 37:
	        case 38:
	        case 39:
	        case 40:
	        case 41:
	        case 42:
	        case 43:
	        case 47:
	        case 64:
	        case 66:
	        case 68:
	        case 71:
	        case 72:
	        case 73:
	        case 82:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 120;
	            this.expr(0);
	            break;
	        case 1:
	        case 2:
	        case 3:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 121;
	            this.variable();
	            break;
	        case 6:
	        case 7:
	        case 21:
	        case 45:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 122;
	            this.ret();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 123;
	            this.matchStat();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 124;
	            this.loopStat();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable() {
	    let localctx = new VariableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, EzLangParser.RULE_variable);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & 14) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 128;
	        this.assignVar();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignVar() {
	    let localctx = new AssignVarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, EzLangParser.RULE_assignVar);
	    var _la = 0; // Token type
	    try {
	        this.state = 144;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new DeclareIDContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 130;
	            this.match(EzLangParser.ID);
	            this.state = 131;
	            this.match(EzLangParser.Conly);
	            this.state = 132;
	            this.type(0);
	            break;

	        case 2:
	            localctx = new AssignIDContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 133;
	            this.match(EzLangParser.ID);
	            this.state = 136;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===61) {
	                this.state = 134;
	                this.match(EzLangParser.Conly);
	                this.state = 135;
	                this.type(0);
	            }

	            this.state = 138;
	            this.match(EzLangParser.Eq);
	            this.state = 139;
	            this.expr(0);
	            break;

	        case 3:
	            localctx = new AssignDconstContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 140;
	            this.deconstVar();
	            this.state = 141;
	            this.match(EzLangParser.Eq);
	            this.state = 142;
	            this.expr(0);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	deconstVar() {
	    let localctx = new DeconstVarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, EzLangParser.RULE_deconstVar);
	    var _la = 0; // Token type
	    try {
	        this.state = 178;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 66:
	            localctx = new DeconstDictContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 146;
	            this.match(EzLangParser.LeftBracket);
	            this.state = 147;
	            this.deconstField();
	            this.state = 152;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 148;
	                    this.match(EzLangParser.Comma);
	                    this.state = 149;
	                    this.deconstField(); 
	                }
	                this.state = 154;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
	            }

	            this.state = 158;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===54) {
	                this.state = 155;
	                this.match(EzLangParser.Comma);
	                this.state = 156;
	                this.match(EzLangParser.Spread);
	                this.state = 157;
	                this.match(EzLangParser.ID);
	            }

	            this.state = 160;
	            this.match(EzLangParser.RightBracket);
	            break;
	        case 68:
	            localctx = new DeconstTupleContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 162;
	            this.match(EzLangParser.LS);
	            this.state = 163;
	            this.deconstField();
	            this.state = 168;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 164;
	                    this.match(EzLangParser.Comma);
	                    this.state = 165;
	                    this.deconstField(); 
	                }
	                this.state = 170;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
	            }

	            this.state = 174;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===54) {
	                this.state = 171;
	                this.match(EzLangParser.Comma);
	                this.state = 172;
	                this.match(EzLangParser.Spread);
	                this.state = 173;
	                this.match(EzLangParser.ID);
	            }

	            this.state = 176;
	            this.match(EzLangParser.RS);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	deconstField() {
	    let localctx = new DeconstFieldContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, EzLangParser.RULE_deconstField);
	    try {
	        this.state = 184;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 180;
	            this.match(EzLangParser.ID);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 181;
	            this.match(EzLangParser.ID);
	            this.state = 182;
	            this.match(EzLangParser.Conly);
	            this.state = 183;
	            this.deconstVar();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declareDef() {
	    let localctx = new DeclareDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, EzLangParser.RULE_declareDef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 186;
	        this.match(EzLangParser.Declare);
	        this.state = 187;
	        this.match(EzLangParser.ID);
	        this.state = 188;
	        this.match(EzLangParser.Eq);
	        this.state = 189;
	        this.type(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typeDef() {
	    let localctx = new TypeDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, EzLangParser.RULE_typeDef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 191;
	        this.match(EzLangParser.Type);
	        this.state = 192;
	        this.match(EzLangParser.T);
	        this.state = 193;
	        this.match(EzLangParser.Eq);
	        this.state = 194;
	        this.type(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	type(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new TypeContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 22;
	    this.enterRecursionRule(localctx, 22, EzLangParser.RULE_type, _p);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 238;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,18,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new NameTypeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 197;
	            this.typeName();
	            break;

	        case 2:
	            localctx = new PatternTypeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 198;
	            this.match(EzLangParser.LP);
	            this.state = 199;
	            this.type(0);
	            this.state = 200;
	            this.match(EzLangParser.RP);
	            break;

	        case 3:
	            localctx = new DictTypeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 202;
	            this.match(EzLangParser.LeftBracket);
	            this.state = 203;
	            this.typeDictField();
	            this.state = 208;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===54) {
	                this.state = 204;
	                this.match(EzLangParser.Comma);
	                this.state = 205;
	                this.typeDictField();
	                this.state = 210;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 211;
	            this.match(EzLangParser.RightBracket);
	            break;

	        case 4:
	            localctx = new TupleTypeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 213;
	            this.match(EzLangParser.LS);
	            this.state = 214;
	            this.type(0);
	            this.state = 219;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===54) {
	                this.state = 215;
	                this.match(EzLangParser.Comma);
	                this.state = 216;
	                this.type(0);
	                this.state = 221;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 222;
	            this.match(EzLangParser.RS);
	            break;

	        case 5:
	            localctx = new FnTypeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 224;
	            this.match(EzLangParser.LP);
	            this.state = 233;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===19 || _la===40) {
	                this.state = 225;
	                this.typeFnField();
	                this.state = 230;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===54) {
	                    this.state = 226;
	                    this.match(EzLangParser.Comma);
	                    this.state = 227;
	                    this.typeFnField();
	                    this.state = 232;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	            }

	            this.state = 235;
	            this.match(EzLangParser.RP);
	            this.state = 236;
	            this.match(EzLangParser.Ret);
	            this.state = 237;
	            this.type(1);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 250;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,20,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 248;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new UnionTypeContext(this, new TypeContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, EzLangParser.RULE_type);
	                    this.state = 240;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 241;
	                    this.match(EzLangParser.BitOr);
	                    this.state = 242;
	                    this.type(5);
	                    break;

	                case 2:
	                    localctx = new OptionalTypeContext(this, new TypeContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, EzLangParser.RULE_type);
	                    this.state = 243;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 244;
	                    this.match(EzLangParser.Query);
	                    break;

	                case 3:
	                    localctx = new ArrTypeContext(this, new TypeContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, EzLangParser.RULE_type);
	                    this.state = 245;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 246;
	                    this.match(EzLangParser.LS);
	                    this.state = 247;
	                    this.match(EzLangParser.RS);
	                    break;

	                } 
	            }
	            this.state = 252;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,20,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	typeFnField() {
	    let localctx = new TypeFnFieldContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, EzLangParser.RULE_typeFnField);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 253;
	        this.id();
	        this.state = 254;
	        this.match(EzLangParser.Conly);
	        this.state = 255;
	        this.type(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


